<resources>
    <string name="app_name">DysseAppen</string>
    <string name="DysseAppenLogo">DysseAppen Logo</string>
    <string name="menuitem1_text">DyssePodden</string>
    <string name="menuitem2_text">Smarta tips</string>
    <string name="menuitem3_text">Dyssa</string>
    <string name="menuitem4_text">Verktygslåda</string>
    <string name="title_activity_dyssepodden">DyssePodden</string>
    <string name="entrypage_carousel_background_description">Bakgrundsbild - Startsida</string>
    <string name="title_activity_smartatips">Smarta tips</string>
    <string name="title_activity_dyssa">Dyssa</string>
    <string name="title_activity_verktyg">Verktygslåda</string>
    <string name="pod_playicon_description">Starta avsnittet</string>
    <string name="tips_startbutton_text">Starta</string>
    <string name="tips_background_description">Bakgrundsbild - Smarta tips</string>
    <string name="tips_playbutton_description">Starta video</string>
    <string name="tips_pattern_description">Mönster - Smarta tips</string>
    <string name="pod_playedicon_description">Ikon som visar att det här avsnittet har spelats upp</string>
    <string name="smartatips_list_title">Min lista</string>
    <string name="tips_share_title">Dela listan</string>
    <string name="verktyg_header_icon_description">Verktygslåda - Ikon</string>
    <string name="verktyg_header">Verktygslåda</string>
    <string name="verktyg_description">På FDB\'s hemsida har vi samlat alla hjälpmedel som nämns i filmerna under Smarta Tips, så att du lätt kan hitta var man kan få tag på dem.</string>
    <string name="verktyg_button_text">Gå till verktygslådan</string>
    <string name="dyssa_who_header_text">Vem är du?</string>
    <string name="dyssa_age_icon_description">Ålder Ikon</string>
    <string name="dyssa_age_drop_text">Hur gammal är du?</string>
    <string name="dyssa_age_droparrow_description">Öppna</string>
    <string name="dyssa_gen_icon_description">Tjej/Kille/Annat Ikon</string>
    <string name="dyssa_gen_drop_text">Är du tjej, kille, annat?</string>
    <string name="dyssa_gen_droparrow_text">Öppna</string>
    <string name="dyssa_currentbutton_text">Aktuell fråga</string>
    <string name="dyssa_all_button_text">Alla frågor</string>
    <string name="dyssa_suggest_button_text">Föreslå en fråga</string>
    <string name="dyssa_question_header_text">Fråga</string>
    <string name="dyssa_switch_description">Dyssa - Ja eller Nej</string>
    <string name="dyssa_answer_button_text">Skicka ditt svar</string>
    <string name="dyssa_result_header_text">Resultat</string>
    <string name="dyssa_yesshare_header">JA</string>
    <string name="dyssa_noshare_header">NEJ</string>
    <string name="dyssa_answer_profile_image_description">Profilbild</string>
    <string name="dyssa_ask_header_text">Föreslå en fråga</string>
    <string name="dyssa_ask_button_text">Skicka</string>
    <string name="dyssa_ask_input_placeholder_text">Skriv din fråga/påstående här</string>
    <string name="dyssa_ask_notification_text">Tack för din fråga!</string>
</resources>
