<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.johnhellbom.dysseappen.Verktyg"
    android:background="@drawable/verktyg_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/verktyg_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#222222"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/verktyg_toolbar">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/toolbox"
            android:scaleType="fitXY"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:contextClickable="false"
            android:contentDescription="@string/verktyg_header_icon_description" />

        <TextView tools:ignore="MissingPrefix"
            fontPath="fonts/CenturyGothic-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verktyg_header"
            android:id="@+id/verktyg_header"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="24sp"
            android:textIsSelectable="true"
            android:textColor="#a1ea93" />

        <TextView tools:ignore="MissingPrefix"
            fontPath="fonts/CenturyGothic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verktyg_description"
            android:id="@+id/verktyg_desc"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:textColor="#fff"
            android:layout_marginTop="12dp" />


        <com.johnhellbom.dysseappen.OffsetButton tools:ignore="MissingPrefix"
            style="?android:attr/borderlessButtonStyle"
            fontPath="fonts/CenturyGothic-Bold.ttf"
            android:layout_width="fill_parent"
            android:text="@string/verktyg_button_text"
            android:layout_height="50dp"
            android:id="@+id/verktyg_button"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:background="@drawable/turc_button_selector"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="22dp" />

    </LinearLayout>

</RelativeLayout>
