<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.johnhellbom.dysseappen.DyssaAsk"
    android:background="@drawable/post_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dyssa_ask_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#222222"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        tools:ignore="MissingPrefix"
        fontPath="fonts/CenturyGothic-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dyssa_ask_notification_text"
        android:id="@+id/dyssa_ask_notification"
        android:textSize="22sp"
        android:textColor="#93f496"
        android:paddingBottom="20dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dyssa_ask_toolbar"
        android:weightSum="1">

        <TextView
            fontPath="fonts/CenturyGothic-Bold.ttf"
            tools:ignore="MissingPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dyssa_ask_header_text"
            android:id="@+id/dyssa_ask_header"
            android:textSize="24sp"
            android:textIsSelectable="true"
            android:textColor="#fdb1e5"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp"
            android:id="@+id/dyssa_ask_wrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/dyssa_ask_text"
                android:layout_gravity="center_horizontal|left|top"
                android:layout_weight="0.51"
                android:background="@drawable/round_shape"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000"
                android:padding="14dp"
                android:gravity="left|top"
                android:hint="@string/dyssa_ask_input_placeholder_text" />

            <com.johnhellbom.dysseappen.OffsetButton tools:ignore="MissingPrefix"
                style="?android:attr/borderlessButtonStyle"
                fontPath="fonts/CenturyGothic-Bold.ttf"
                android:layout_width="fill_parent"
                android:text="@string/dyssa_ask_button_text"
                android:layout_height="50dp"
                android:id="@+id/dyssa_ask_button"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:background="@drawable/pink_button_selector"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="14dp" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
