<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.johnhellbom.dysseappen.MainActivity"
    android:id="@+id/mainLayout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#222222"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/logo"
            android:contentDescription="@string/DysseAppenLogo"
            android:cropToPadding="false"
            android:longClickable="true" />

        <ImageView
            android:id="@+id/fdblogo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:src="@drawable/fdblogo"
            android:contentDescription="FDB Logo"
            android:cropToPadding="false"
            android:longClickable="true"
            android:paddingRight="8dp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_toolbar"
        android:weightSum="1"
        android:baselineAligned="false"
        android:gravity="bottom">

        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/entrypageCarousel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.01"
            android:background="#111111" />

        <com.johnhellbom.dysseappen.OffsetButton tools:ignore="MissingPrefix"
            style="?android:attr/borderlessButtonStyle"
            fontPath="fonts/CenturyGothic-Bold.ttf"
            android:layout_width="fill_parent"
            android:layout_height="71dp"
            android:id="@+id/menubutton1"
            android:textAllCaps="false"
            android:text="@string/menuitem1_text"
            android:textSize="@dimen/menuitem_fontsize"
            android:background="@drawable/menuitem1_selector"
            android:drawableLeft="@drawable/menuitem1_icon"
            android:drawablePadding="18dp"
            android:drawableRight="@drawable/menuitem_arrow"
            android:gravity="center|left"
            android:paddingStart="18dp"
            android:paddingEnd="15dp" />

        <com.johnhellbom.dysseappen.OffsetButton tools:ignore="MissingPrefix"
            style="?android:attr/borderlessButtonStyle"
            fontPath="fonts/CenturyGothic-Bold.ttf"
            android:layout_width="fill_parent"
            android:layout_height="71dp"
            android:id="@+id/menubutton2"
            android:textAllCaps="false"
            android:text="@string/menuitem2_text"
            android:textSize="@dimen/menuitem_fontsize"
            android:background="@drawable/menuitem2_selector"
            android:drawableLeft="@drawable/menuitem2_icon"
            android:drawablePadding="18dp"
            android:drawableRight="@drawable/menuitem_arrow"
            android:gravity="center|left"
            android:paddingStart="20dp"
            android:paddingEnd="15dp" />

        <com.johnhellbom.dysseappen.OffsetButton tools:ignore="MissingPrefix"
            style="?android:attr/borderlessButtonStyle"
            fontPath="fonts/CenturyGothic-Bold.ttf"
            android:layout_width="fill_parent"
            android:layout_height="71dp"
            android:id="@+id/menubutton3"
            android:textAllCaps="false"
            android:text="@string/menuitem3_text"
            android:textSize="@dimen/menuitem_fontsize"
            android:drawableLeft="@drawable/menuitem3_icon"
            android:drawablePadding="18dp"
            android:drawableRight="@drawable/menuitem_arrow"
            android:background="@drawable/menuitem3_selector"
            android:gravity="center|left"
            android:paddingStart="16dp"
            android:paddingEnd="15dp" />

        <com.johnhellbom.dysseappen.OffsetButton tools:ignore="MissingPrefix"
            style="?android:attr/borderlessButtonStyle"
            fontPath="fonts/CenturyGothic-Bold.ttf"
            android:layout_width="fill_parent"
            android:layout_height="71dp"
            android:id="@+id/menubutton4"
            android:textAllCaps="false"
            android:text="@string/menuitem4_text"
            android:textSize="@dimen/menuitem_fontsize"
            android:drawableLeft="@drawable/menuitem4_icon"
            android:drawablePadding="18dp"
            android:drawableRight="@drawable/menuitem_arrow"
            android:background="@drawable/menuitem4_selector"
            android:gravity="center|left"
            android:paddingEnd="15dp"
            android:paddingStart="15dp" />

    </LinearLayout>

    <com.matthewtamlin.sliding_intro_screen_library.SelectionIndicator tools:ignore="MissingPrefix"
        android:id="@+id/carouselPagination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:numberOfItems="1"
        app:activeItemIndex="0"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="40dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:id="@+id/main_progressBar"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />


</RelativeLayout>
