<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.johnhellbom.dysseappen.DyssaQuestion"
    android:background="@drawable/dyssa_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dyssa_question_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#222222"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:id="@+id/dyssa_question_progressbar"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dyssa_question_toolbar"
        android:visibility="invisible"
        android:id="@+id/dyssa_question_wrapper">

        <TextView
            fontPath="fonts/CenturyGothic-Bold.ttf"
            tools:ignore="MissingPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dyssa_question_header_text"
            android:id="@+id/dyssa_question_header"
            android:textSize="24sp"
            android:textIsSelectable="true"
            android:textColor="#a3f0ff"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp" />

        <me.grantland.widget.AutofitTextView
            fontPath="fonts/CenturyGothic.ttf"
            tools:ignore="MissingPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dyssa_question_title"
            android:textSize="24sp"
            autofit:minTextSize="14sp"
            android:maxLines="6"
            android:textIsSelectable="true"
            android:textColor="#fff"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:id="@+id/dyssa_question_switch"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/dyssa_switch_description"
            android:src="@drawable/onswitch" />

        <com.johnhellbom.dysseappen.OffsetButton tools:ignore="MissingPrefix"
            style="?android:attr/borderlessButtonStyle"
            fontPath="fonts/CenturyGothic-Bold.ttf"
            android:layout_width="fill_parent"
            android:text="@string/dyssa_answer_button_text"
            android:layout_height="50dp"
            android:id="@+id/dyssa_question_answer_button"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:background="@drawable/turc_button_selector"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="22dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="30dp" />

    </LinearLayout>


</RelativeLayout>
